# lista-compras

./: .gitignore  Dockerfile  README.md  REQUISITOS-SISTEMA.md  docker-compose.yml  lista.csv  main.py  pyproject.toml
.agent/: ARQUITETURA.md  COMPRAS.md  DESIGNER-SYSTEM.md  FUNCIONALIDADE.md  NOVO-DESIGNER.md  OBJETIVO-PROJETO.md  PAINEL-ADMIN.md  status.md
.agent/deploy/: GUIA-DEPLOY-EASYPAINEL.md
.agent/exemplos/: code.html
.agent/exemplos/design/: design_system12.html
.agent/exemplos/painel-admin/catalagos/: DESIGN.md  code.html
.agent/exemplos/painel-admin/confirmar/: comfirma-importacao-code.html
.agent/exemplos/painel-admin/pagina/: pagina-inicial-code.html
.agent/exemplos/painel-admin/popup/: pup-importação-code.html
.agent/exemplos/pdf/: frontend_integration.html  lista_pdf.html  urls_pdf.py  views_pdf.py
.agent/fundamentos/: ARQUITETURA.md  DESIGNER-SYSTEM.md  FUNCIONALIDADE.md  OBJETIVO-PROJETO.md  design-system02.html
.agent/implementacao/: 01-IMPLEMENTAÇÃO.md  02-DASHBOARD-ADMIN.md  03-AUTOMACAO-CSV-E-CATALOGO.md  04-MOTOR-PDF-E-IMPRESSAO.md
dotenv_files/: .env.example
scripts/: commands.sh  entrypoint_prod.sh  script.py  start_gunicorn.sh  wait_psql.sh
src/: requirements.txt  seed_lists.py
src/core/: settings.py  urls.py
src/core/core/: settings.py
src/shopping/: admin.py  apps.py  forms.py  models.py  urls.py  views.py  views_auth.py
src/shopping/migrations/: 0001_initial.py  0002_shoppingitem_category_shoppinglist_is_locked.py  0003_product_alter_shoppingitem_options_and_more.py
(+24 files in other folders)
