[project]
name = "lista-compras"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asgiref>=3.11.1",
    "django>=6.0.2,<6.1",
    "gunicorn>=20.1.0",
    "psycopg2-binary>=2.9.6",
    "python-dotenv>=1.2.2",
    "sqlparse>=0.5.5",
    "tzdata>=2025.3",
    "qrcode[pil]>=8.0",
]
